react_client/src/components/table/styles/table.css
#pip-window {
  position: fixed;
  bottom: 10px;
  right: 10px;
  width: 200px;
  height: 200px;
  overflow: auto;
  border: 1px solid #ccc;
  z-index: 1000;
}

.table-outer-div {
  /* added to scroll view of table */
  overflow-y: auto;
  max-height: 28em;
}

.table-container {
  margin: 1em 0;
  display: flex;
  flex-direction: column;
  width: 75%;
}

.table {
  background-color: var(--black);
  color: var(--light);
  border-spacing: 0;
  width: 100%;
  border-radius: 0.5em;
}

.table-head {
  background-color: var(--black);
  height: 3em;
  vertical-align: middle;
  transition: background-color 0.5s ease-in-out;
  /* added for body scroll */
  position: sticky;
  top: 0;
}

.table-header:hover {
  background-color: var(--blue-light);
  transition: background-color 0.5s ease-in-out;
}

.table-row {
  vertical-align: middle;
  transition: background-color 0.5s ease-in-out;
}

.table-row:hover {
  background-color: var(--blue-light);
  transition: background-color 0.5s ease-in-out;
}

.table-icon {
  background-color: var(--blue-light);
  max-width: 4em;
  max-height: auto;
}

.fixed-head {
  position: sticky;
  top: 0;
  z-index: 100;
}

.scrollable-body {
  overflow-x: hidden;
  height: calc(100vh - 500px);
  overflow: auto;
}

/* Works on Chrome, Edge, and Safari */
.table-outer-div::-webkit-scrollbar {
  background-color: var(--off-black);
  width: 0.75em; /* Adjust scrollbar width */
  border-radius: 16px;
}

.table-outer-div::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); /* Adjust track shadow */
}

.table-outer-div::-webkit-scrollbar-thumb {
  background: linear-gradient(var(--blue-light) 30%, var(--blue-bg));
  border-radius: 16px;
}

